--- a/IndividualPartB/IndividualPartB.csproj
+++ b/IndividualPartB/IndividualPartB.csproj
@@ -76,6 +76,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AssignmentService.cs" />
     <Compile Include="Services\CourseService.cs" />
     <Compile Include="Services\StudentService.cs" />
     <Compile Include="Services\TrainerService.cs" />
